# memerna

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODING.md  Justfile  README.md  STYLE.md  TODO.md  build.py  check.sh  main.cpp  pyproject.toml
benchmark_results/: RNAstructure_archiveii.results  RNAstructure_random.results  UNAFold_archiveii.results  UNAFold_random.results  ViennaRNAd2_archiveii.results  ViennaRNAd2_random.results  ViennaRNAd3_archiveii.results  ViennaRNAd3_random.results
cmake/: ATTRIBUTION  DownloadGTest.cmake  FindASan.cmake  FindMPFR.cmake  FindMSan.cmake  FindUBSan.cmake  get_cpm.cmake
data/: benchmark.json  benchmark.json.old  bulge_misc.data  coaxial_misc.data  dangle3.data  dangle5.data  example_rnastructure  example_seq  example_vienna  hairpin_initiation.data  hairpin_misc.data  internal_initiation.data  internal_misc.data  internal_other_mismatch.data  misc.data  multiloop_hack_misc.data  multiloop_misc.data  multiloop_t99_misc.data  stacking.data  terminal.data
data/examples/: 100.in  1000.in  bulge1.in  bulge2.in  hairpin1.in  hairpin2.in  internal2.in  internal3.in  internal4.in  mismatch_coaxial.in  multibranch1.in  multibranch2.in  nc_045512.2.in  rnastructure_bug.in
examples/: ICAM1.in  internal1.in  internal2.in  internal5.in  multibranch1.in  multibranch3.in  rd0260.in  special_stacking.in  stacking1.in
memevault/: create.sql
rnapy/: run.py
rnapy/analysis/: fold_accuracy.py  fold_perf.py  metrics.py  subopt_perf.py
rnapy/bridge/: args.py  linearfold.py  memerna.py  memerna01.py  rnapackage.py  rnastructure.py  sparsemfefold.py  sparsernafold.py  viennarna.py
rnapy/data/: args.py  memevault.py
rnapy/design/: run.py
rnapy/model/: args.py  model_cfg.py  rna.py
rnapy/programs/: afl_fuzz.py  afl_fuzz_min.py  build.py  convert_format.py  crop_image.py  design.py  harness.py
rnapy/util/: args.py  command.py  format.py  util.py
scripts/: common.py  compare_partition.py  compute_energy.py  convert.py  convert_rnastructure.py  crop.py  extract_subsequence.py  memevault.py  parse_data.py  plot_benchmarks.py  rna.py  run.py  run_benchmarks.py  run_efn.py  run_fold.py  run_fuzz.py  scrape.py  test.py  test_perf.py  test_subopt.py
scripts/analysis/: metrics.py
scripts/bridge/: args.py  memerna.py  rnapackage.py  rnastructure.py  sparsemfefold.py  unafold.py  viennarna.py
scripts/data/: args.py  memevault.py
scripts/design/: fashion_model.py  language.py  nn.py  run.py  trainer.py
scripts/model/: args.py  config.py  parse.py  random.py  rna.py
scripts/perf/: test.py  test_perf.py
scripts/plot/: fold_accuracy.py  fold_performance.py  load_data.py  plot_common.py  run.py  subopt_performance.py
scripts/programs/: afl_fuzz.py  afl_fuzz_min.py  build.py  compare_partition.py  convert.py  convert_format.py  crop.py  crop_image.py  design.py  extract_subsequence.py  fuzz.py  fuzz_min.py  harness.py  parse_data.py  parse_rnastructure_datatables.py
scripts/util/: command.py  compare_partition.py  convert.py  crop.py  extract_subsequence.py  file.py  format.py  util.py
src/: argparse.cpp  argparse.h  array.cpp  array.h  base.cpp  base.h  common.cpp  common.h  constants.h  context.cpp  context.h  energy.cpp  energy.h  fold.cpp  fold.h  globals.cpp  globals.h  main.cpp  minmaxheap.h  options.h  parsing.cpp  parsing.h  splaymap.h  structure.cpp  structure.h
src/api/: mfe.h  options.h  part.h  pfn.h  trace.h
src/bridge/: bridge.cpp  bridge.h  memerna.cpp  memerna.h  rnastructure.cpp  rnastructure.h
src/compute/: boltz_dp.h  brute.cpp  brute.h  constants.h  dp.h
src/context/: config.cpp  config.h  ctx.cpp  ctx.h
src/ctx/: config.cpp  config.h  ctx.cpp  ctx.h  ctx_cfg.cpp  ctx_cfg.h
src/energy/: ctds.cpp  ctds.h  energy.cpp  energy.h  energy_globals.cpp  energy_globals.h  energy_internal.cpp  energy_internal.h  energy_model.cpp  energy_model.h  fast_energy.cpp  fast_energy.h  load_model.cpp  load_model.h  structure.cpp  structure.h
src/fold/: brute_fold.cpp  brute_fold.h  context.cpp  context.h  fold.cpp  fold.h  fold0.cpp  fold1.cpp  fold1.h  fold2.cpp  fold2.h  fold3.cpp  fold3.h  fold4.cpp  fold4.h  fold_constants.h  fold_globals.cpp  fold_globals.h  fold_internal.cpp  fold_internal.h  globals.cpp  globals.h  precomp.cpp  precomp.h  slow_fold.cpp  slow_fold.h  suboptimal.cpp  suboptimal.h  suboptimal0.cpp  suboptimal0.h  suboptimal1.cpp  suboptimal1.h  suboptimal1_base.cpp  suboptimal1_base.h  suboptimal1_delta.cpp  suboptimal1_delta.h  suboptimal1_num.cpp  suboptimal1_num.h  suboptimal2.cpp  suboptimal2.h  (+2 more)
src/fuzz/: config.cpp  config.h  context.cpp  context.h  fuzz_cfg.cpp  fuzz_cfg.h  fuzz_harness.cpp  fuzz_harness.h  fuzz_invocation.cpp  fuzz_invocation.h  fuzzer.cpp  fuzzer.h
src/mfe/: brute_fold.cpp  brute_fold.h  fold.h  fold0.cpp  fold1.cpp  fold2.cpp  fold3.cpp  fold_constants.h  fold_globals.cpp  fold_globals.h  suboptimal0.cpp  suboptimal0.h  suboptimal1.cpp  suboptimal1.h  traceback.cpp
src/model/: base.cpp  base.h  branch.cpp  branch.h  config.cpp  config.h  constants.h  context.cpp  context.h  ctd.cpp  ctd.h  energy.cpp  energy.h  gen.cpp  gen.h  globals.cpp  globals.h  model.cpp  model.h  parsing.cpp  parsing.h  part.h  pfn.h  primary.cpp  primary.h  secondary.cpp  secondary.h  structure.cpp  structure.h
src/partition/: exterior.cpp  internal.cpp  partition.h  partition0.cpp  partition1.cpp  partition_globals.cpp  partition_globals.h  probability.cpp
src/programs/: batch_energy.cpp  brute.cpp  brute_fold.cpp  compute_energy.cpp  efn.cpp  explain_fold.cpp  fold.cpp  fuzz.cpp  harness.cpp  partition.cpp  print.cpp  print.h  subopt.cpp
src/tests/: init.cpp  init.h  util.cpp  util.h
src/util/: argparse.cpp  argparse.h  array.h  container.h  error.cpp  error.h  float.h  lru_vector_cache.h  macros.h  util.h  (+4 more)
tests/: base_test.cpp  brute_test.cpp  common_test.cpp  common_test.h  ctds_test.cpp  ctds_test.h  energy_test.cpp  fold_test.cpp  main.cpp  mfe_test.cpp  minmaxheap_test.cpp  parsing_test.cpp  splaymap_test.cpp
(+510 files in other folders)
