[tool.poetry]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
classifiers = ["License :: OSI Approved :: GPL-3.0-only"]
description = "memerna"
name = "memerna"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
bidict = "^0.22.1"
click = "^8.1.5"
click-params = "^0.4.1"
click_log = "^0.4.0"
cloup = "^2.1.2"
libtmux = "^0.22.1"
pandas = "^2.0.3"
protobuf = "3.20.1"
python = "~3.11"
python-dotenv = "^1.0.0"
ray = "^2.5.1"
scipy = "^1.11.1"
seaborn = "^0.12.2"
statsmodels = "^0.14.0"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-linux_x86_64.whl"}
torch-tb-profiler = "^0.4.1"
viennarna = "^2.6.2"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
poetry-plugin-up = "^0.3.0"
prospector = "^1.10.2"

[tool.mypy]
show_column_numbers = true
# Require type hints
disallow_untyped_defs = true

# Allow types that is not imported to be used in annotations.
# This is necessary because some libraries don't have annotations.
disallow_any_unimported = false

# Disallow implicit optional e.g. arg: str = None
no_implicit_optional = true

# Check bodies of functions without type annotations too
check_untyped_defs = true

# Warn about returning Any from a function annotated to not return it
warn_return_any = true

# Warn about unused ignore annotations
warn_unused_ignores = true

# Show error codes
show_error_codes = true

# Set python version.
python_version = '3.11'

# No type hints for torchvision.
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "torchvision.*",
  "torchtext.*",
  "click_log.*",
  "numpy.*",
  "ViennaRNA.*",
  "pandas.*",
  "matplotlib.*",
  "seaborn.*",
  "statsmodels.*",
  "click_params.*",
  "scipy.*",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pylint.format]
max-line-length = 100

[tool.pylint.typecheck]
generated-members = "numpy.*,torch.*,pandas.*"

[tool.pylint.messages_control]
# Fix "not callable" errors for torch.nn.Module subclasses
# Want to use f-strings in logging
# unsubscriptable-object: Fix false positive on bimap indexing
# too-many-arguments: Unavoidable sometimes.
# consider-using-enumerate: False positives for: for i in range(len(...))
disable = [
  "not-callable",
  "logging-fstring-interpolation",
  "unsubscriptable-object",
  "too-many-arguments",
  "consider-using-enumerate",
]
